--- a/src/style/TodoList.css
+++ b/src/style/TodoList.css
@@ -1,4 +1,12 @@
 .card-header-custom {
   color: #0099cc;
   text-align: center;
+  position: fixed;
+  top: 1vh;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 10;
+  margin-top: 1vh;
 }
